--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "TEST",
   "main": "index.js",
   "scripts": {
-    "test": "node index"
+    "test": "node index.js"
   },
   "author": "",
   "license": "ISC"
