--- a/ponpon/HelloPonta/package.json
+++ b/ponpon/HelloPonta/package.json
@@ -4,7 +4,7 @@
   "description": "TEST",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "test": "echo \"No tests yet\""
   },
   "author": "",
   "license": "ISC"
